# fmttools

./: .gitignore  CMakeLists.txt  README.md
include/: fmttools.h
src/: lib.cpp
tests/: tests.cpp
